spring-boot-3/java-reactive/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-reactive
spec:
  type: LoadBalancer
  selector:
    app: java-reactive
  ports:
    - port: 8080
      protocol: TCP
