spring-boot-3/java-reactive/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-ingress.info
      http:
        paths:
          - path: /java-reactive
            pathType: Prefix
            backend:
              service:
                name: java-reactive
                port:
                  number: 8080
